PuRSUE/design-time/2-parser2-UP2CO/UP2CO/target/generated-sources/antlr4/UP2COParser.java
// Generated from UP2CO.g4 by ANTLR 4.7.1

   package se.cth.pursue;
   import java.util.Set;
   import java.util.HashSet;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class UP2COParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, ID=21, CLOCK_ID=22, POSITION_ID=23, STATE_ID=24, 
		INT=25, SYNC_MASTER=26, SYNC_SLAVE=27, ACCEPTED_CHARACTER=28, ASSIGNMENT=29, 
		SMALLER_STRONG=30, SMALLER_WEAK=31, EQUALS=32, AND=33, OR=34, WS=35;
	public static final int
		RULE_controller = 0, RULE_state_block = 1, RULE_state_if = 2, RULE_while_block = 3, 
		RULE_when_block = 4, RULE_clock_conditions_set = 5, RULE_clock_condition = 6, 
		RULE_clock_higher_strong = 7, RULE_clock_higher_weak = 8, RULE_clock_lower_strong = 9, 
		RULE_clock_lower_weak = 10, RULE_clock_equal = 11, RULE_clock_constant_condition_equality = 12, 
		RULE_clock_constant_condition_1_equality = 13, RULE_clock_constant_condition_1_strong = 14, 
		RULE_clock_constant_condition_1_weak = 15, RULE_clock_constant_condition_2_strong = 16, 
		RULE_clock_constant_condition_2_weak = 17, RULE_transition = 18, RULE_preconditions = 19, 
		RULE_automa_state = 20, RULE_state_variable = 21;
	public static final String[] ruleNames = {
		"controller", "state_block", "state_if", "while_block", "when_block", 
		"clock_conditions_set", "clock_condition", "clock_higher_strong", "clock_higher_weak", 
		"clock_lower_strong", "clock_lower_weak", "clock_equal", "clock_constant_condition_equality", 
		"clock_constant_condition_1_equality", "clock_constant_condition_1_strong", 
		"clock_constant_condition_1_weak", "clock_constant_condition_2_strong", 
		"clock_constant_condition_2_weak", "transition", "preconditions", "automa_state", 
		"state_variable"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'\n'", "'State: '", "'('", "' '", "')'", "'While you are in '", 
		"'true'", "', wait.\n'", "'When you are in '", "', take transition '", 
		"'-'", "'->'", "'{'", "'tau'", "','", "'}'", "' > '", "'.'", "'_'", "'='", 
		null, null, null, null, null, null, null, null, "' := '", "'<'", "'<='", 
		"'=='", "'&&'", "'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "ID", "CLOCK_ID", 
		"POSITION_ID", "STATE_ID", "INT", "SYNC_MASTER", "SYNC_SLAVE", "ACCEPTED_CHARACTER", 
		"ASSIGNMENT", "SMALLER_STRONG", "SMALLER_WEAK", "EQUALS", "AND", "OR", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UP2CO.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UP2COParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ControllerContext extends ParserRuleContext {
		public Controller contr;
		public State_blockContext stato;
		public List<State_blockContext> state_block() {
			return getRuleContexts(State_blockContext.class);
		}
		public State_blockContext state_block(int i) {
			return getRuleContext(State_blockContext.class,i);
		}
		public ControllerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controller; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).enterController(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).exitController(this);
		}
	}

	public final ControllerContext controller() throws RecognitionException {
		ControllerContext _localctx = new ControllerContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_controller);

				System.out.println("I start parsing!");
				String str = "#Controller header";
				((ControllerContext)_localctx).contr =  new Controller(str);



			
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(44);
				((ControllerContext)_localctx).stato = state_block();

							//System.out.println("new state!");

							_localctx.contr.addState(((ControllerContext)_localctx).stato.stato);
						
				setState(48);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(46);
					match(T__0);
					}
					break;
				case EOF:
				case T__1:
					{
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__1 );


					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_blockContext extends ParserRuleContext {
		public State_block stato;
		public State_ifContext config;
		public When_blockContext whe;
		public State_ifContext state_if() {
			return getRuleContext(State_ifContext.class,0);
		}
		public List<While_blockContext> while_block() {
			return getRuleContexts(While_blockContext.class);
		}
		public While_blockContext while_block(int i) {
			return getRuleContext(While_blockContext.class,i);
		}
		public List<When_blockContext> when_block() {
			return getRuleContexts(When_blockContext.class);
		}
		public When_blockContext when_block(int i) {
			return getRuleContext(When_blockContext.class,i);
		}
		public State_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).enterState_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).exitState_block(this);
		}
	}

	public final State_blockContext state_block() throws RecognitionException {
		State_blockContext _localctx = new State_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_state_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(T__1);
			{
			setState(57);
			((State_blockContext)_localctx).config = state_if();
			}

					
					((State_blockContext)_localctx).stato =  new State_block("#state header", ((State_blockContext)_localctx).config.sts);


				
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(63);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__5:
					{
					setState(59);
					while_block();
					}
					break;
				case T__8:
					{
					setState(60);
					((State_blockContext)_localctx).whe = when_block();

								_localctx.stato.addWhen(((State_blockContext)_localctx).whe.when);
							
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__5 || _la==T__8 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class State_ifContext extends ParserRuleContext {
		public Set<Status> sts;
		public Automa_stateContext state;
		public State_variableContext variable;
		public List<Automa_stateContext> automa_state() {
			return getRuleContexts(Automa_stateContext.class);
		}
		public Automa_stateContext automa_state(int i) {
			return getRuleContext(Automa_stateContext.class,i);
		}
		public List<State_variableContext> state_variable() {
			return getRuleContexts(State_variableContext.class);
		}
		public State_variableContext state_variable(int i) {
			return getRuleContext(State_variableContext.class,i);
		}
		public State_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).enterState_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).exitState_if(this);
		}
	}

	public final State_ifContext state_if() throws RecognitionException {
		State_ifContext _localctx = new State_ifContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state_if);

				//System.out.println("new if_block!");
				 ((State_ifContext)_localctx).sts =  new HashSet<Status>();
			
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(T__2);
			setState(68);
			match(T__3);
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69);
				((State_ifContext)_localctx).state = automa_state();
				setState(70);
				match(T__3);

						_localctx.sts.add(((State_ifContext)_localctx).state.stat);
					
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(77);
			match(T__4);
			setState(78);
			match(T__3);
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79);
				((State_ifContext)_localctx).variable = state_variable();
				setState(80);
				match(T__3);

						_localctx.sts.add(((State_ifContext)_localctx).variable.stat);
					
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==POSITION_ID || _la==STATE_ID );
			setState(87);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_blockContext extends ParserRuleContext {
		public List<Clock_conditions_setContext> clock_conditions_set() {
			return getRuleContexts(Clock_conditions_setContext.class);
		}
		public Clock_conditions_setContext clock_conditions_set(int i) {
			return getRuleContext(Clock_conditions_setContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(UP2COParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(UP2COParser.OR, i);
		}
		public While_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).enterWhile_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).exitWhile_block(this);
		}
	}

	public final While_blockContext while_block() throws RecognitionException {
		While_blockContext _localctx = new While_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_while_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

					//System.out.println("new while_block!");
				
			setState(90);
			match(T__5);
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				{
				{
				setState(91);
				match(T__6);
				}
				}
				break;
			case T__2:
				{
				{
				{
				setState(92);
				clock_conditions_set();
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__3) {
					{
					{
					setState(93);
					match(T__3);
					setState(94);
					match(OR);
					setState(95);
					match(T__3);
					setState(96);
					clock_conditions_set();
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(104);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class When_blockContext extends ParserRuleContext {
		public When_block when;
		public Clock_conditions_setContext set;
		public Clock_conditions_setContext other_set;
		public TransitionContext transiz;
		public List<Clock_conditions_setContext> clock_conditions_set() {
			return getRuleContexts(Clock_conditions_setContext.class);
		}
		public Clock_conditions_setContext clock_conditions_set(int i) {
			return getRuleContext(Clock_conditions_setContext.class,i);
		}
		public List<TransitionContext> transition() {
			return getRuleContexts(TransitionContext.class);
		}
		public TransitionContext transition(int i) {
			return getRuleContext(TransitionContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(UP2COParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(UP2COParser.OR, i);
		}
		public When_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_when_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).enterWhen_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).exitWhen_block(this);
		}
	}

	public final When_blockContext when_block() throws RecognitionException {
		When_blockContext _localctx = new When_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_when_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

					//System.out.println("new when_block!");
					((When_blockContext)_localctx).when =  new When_block();

				
			setState(107);
			match(T__8);
			setState(108);
			((When_blockContext)_localctx).set = clock_conditions_set();
			 
					_localctx.when.addClockSet(((When_blockContext)_localctx).set.condizioni);

				
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(110);
					match(T__3);
					setState(111);
					match(OR);
					setState(112);
					match(T__3);
					setState(113);
					((When_blockContext)_localctx).other_set = clock_conditions_set();
					 
							_localctx.when.addClockSet(((When_blockContext)_localctx).other_set.condizioni);

						
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(121);
			match(T__9);
			setState(122);
			((When_blockContext)_localctx).transiz = transition();
			setState(123);
			match(T__0);
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(124);
					transition();
					setState(125);
					match(T__0);
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}

					_localctx.when.setOrigin(((When_blockContext)_localctx).transiz.origin);
					_localctx.when.setTarget(((When_blockContext)_localctx).transiz.target);
					_localctx.when.setTrigger(((When_blockContext)_localctx).transiz.syncro);
				
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Clock_conditions_setContext extends ParserRuleContext {
		public Clock_cond_set condizioni;
		public Clock_conditionContext cond;
		public List<Clock_conditionContext> clock_condition() {
			return getRuleContexts(Clock_conditionContext.class);
		}
		public Clock_conditionContext clock_condition(int i) {
			return getRuleContext(Clock_conditionContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(UP2COParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(UP2COParser.AND, i);
		}
		public Clock_conditions_setContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clock_conditions_set; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).enterClock_conditions_set(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).exitClock_conditions_set(this);
		}
	}

	public final Clock_conditions_setContext clock_conditions_set() throws RecognitionException {
		Clock_conditions_setContext _localctx = new Clock_conditions_setContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_clock_conditions_set);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{

					//System.out.println("new clock condition set");
					((Clock_conditions_setContext)_localctx).condizioni =  new Clock_cond_set();

				
			setState(135);
			match(T__2);
			{
			setState(136);
			((Clock_conditions_setContext)_localctx).cond = clock_condition();
			}

						//System.out.println("new clock condition");
						_localctx.condizioni.addCond(((Clock_conditions_setContext)_localctx).cond.condizione);
					
			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(138);
					match(T__3);
					setState(139);
					match(AND);
					setState(140);
					match(T__3);
					setState(141);
					((Clock_conditions_setContext)_localctx).cond = clock_condition();

						 		//System.out.println("other clock condition");
						 		_localctx.condizioni.addCond(((Clock_conditions_setContext)_localctx).cond.condizione);
						 	
					}
					} 
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(149);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Clock_conditionContext extends ParserRuleContext {
		public Clock_cond condizione;
		public Clock_higher_strongContext cond1;
		public Clock_higher_weakContext cond2;
		public Clock_lower_strongContext cond3;
		public Clock_lower_weakContext cond4;
		public Clock_equalContext cond10;
		public Clock_constant_condition_equalityContext cond5;
		public Clock_constant_condition_1_equalityContext cond11;
		public Clock_constant_condition_1_strongContext cond6;
		public Clock_constant_condition_1_weakContext cond7;
		public Clock_constant_condition_2_strongContext cond8;
		public Clock_constant_condition_2_weakContext cond9;
		public Clock_higher_strongContext clock_higher_strong() {
			return getRuleContext(Clock_higher_strongContext.class,0);
		}
		public Clock_higher_weakContext clock_higher_weak() {
			return getRuleContext(Clock_higher_weakContext.class,0);
		}
		public Clock_lower_strongContext clock_lower_strong() {
			return getRuleContext(Clock_lower_strongContext.class,0);
		}
		public Clock_lower_weakContext clock_lower_weak() {
			return getRuleContext(Clock_lower_weakContext.class,0);
		}
		public Clock_equalContext clock_equal() {
			return getRuleContext(Clock_equalContext.class,0);
		}
		public Clock_constant_condition_equalityContext clock_constant_condition_equality() {
			return getRuleContext(Clock_constant_condition_equalityContext.class,0);
		}
		public Clock_constant_condition_1_equalityContext clock_constant_condition_1_equality() {
			return getRuleContext(Clock_constant_condition_1_equalityContext.class,0);
		}
		public Clock_constant_condition_1_strongContext clock_constant_condition_1_strong() {
			return getRuleContext(Clock_constant_condition_1_strongContext.class,0);
		}
		public Clock_constant_condition_1_weakContext clock_constant_condition_1_weak() {
			return getRuleContext(Clock_constant_condition_1_weakContext.class,0);
		}
		public Clock_constant_condition_2_strongContext clock_constant_condition_2_strong() {
			return getRuleContext(Clock_constant_condition_2_strongContext.class,0);
		}
		public Clock_constant_condition_2_weakContext clock_constant_condition_2_weak() {
			return getRuleContext(Clock_constant_condition_2_weakContext.class,0);
		}
		public Clock_conditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clock_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).enterClock_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UP2COListener ) ((UP2COListener)listener).exitClock_condition(this);
		}
	}

	public final Clock_conditionContext clock_condition() throws RecognitionException {
		Clock_conditionContext _localctx = new Clock_conditionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_clock_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(151);
				((Clock_conditionContext)_localctx).cond1 = clock_higher_strong();

							((Clock_conditionContext)_localctx).condizione =  ((Clock_conditionContext)_localctx).cond1.condo;
							
				}
				break;
			case 2:
				{
				setState(154);
				((Clock_conditionContext)_localctx).cond2 = clock_higher_weak();

							((Clock_conditionContext)_localctx).condizione =  ((Clock_conditionContext)_localctx).cond2.condo;
							
				}
				break;
			case 3:
				{
				setState(157);
				((Clock_conditionContext)_localctx).cond3 = clock_lower_strong();

							((Clock_conditionContext)_localctx).condizione =  ((Clock_conditionContext)_localctx).cond3.condo;
							
				}
				break;
			case 4:
				{
				setState(160);
				((Clock_conditionContext)_localctx).cond4 = clock_lower_weak();
